# ml-forecaster

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
config/: alembic.ini  data_sources.yaml  default.yaml  exposition.yaml  targets.yaml
deploy/grafana/dashboards/: forecaster-diagnostics.json
deploy/prometheus/: prometheus.yml
docs/: adding-an-algorithm.md  architecture.md  grafana-overlay.md  picking-algorithms.md  setup-and-review.md
docs/superpowers/specs/: 2026-05-21-ui-restructure-design.md
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_python  .graphify_root  .graphify_semantic.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: _fallback_synth.py  preflight.sh  seed_synthetic.py
src/forecaster/: __init__.py
src/forecaster/ai/: __init__.py  explainer.py  ollama_client.py
src/forecaster/api/: __init__.py  deps.py  main.py  prometheus_export.py
src/forecaster/config/: __init__.py  loader.py  schema.py
src/forecaster/data/: __init__.py  actuals.py  (+4 more)
tests/: conftest.py
tests/fixtures/: synthetic_series.py
tests/integration/: test_algo_library.py  test_api_metrics.py  test_cancel_and_pause.py  test_custom_run.py  test_dashboard.py  test_data_footprint.py  test_diagnostics.py  test_filters.py  test_iteration4.py  test_manage_ai.py  test_manage_pages.py  test_models_chart_robustness.py  test_models_extended.py  test_per_metric_ui.py  test_pipeline_sqlite.py  test_ui_graphs.py
tests/unit/: test_ai_explainer.py  test_ai_routes.py  test_anomaly_filter.py  test_config.py  test_explore_routes.py  test_fetch_actuals_helper.py  test_ist_filter.py  test_lag_features.py  test_mature_wrappers.py  test_metrics.py  test_models_smoke.py  test_overrides.py  test_per_metric_shortlist.py  test_ranking.py
(+94 files in other folders)
