[project]
name = "forecaster"
version = "0.1.0"
description = "Multi-model server resource usage forecaster for Prometheus / LGTM stack"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # Core
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "tenacity>=8.2",
    "python-json-logger>=2.0",

    # Persistence
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",

    # Scheduling / queue
    "celery[redis]>=5.3",
    "apscheduler>=3.10",
    "redis>=5.0",

    # Data + numerics
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "scipy>=1.12",

    # Forecasting models
    "statsmodels>=0.14",
    "pmdarima>=2.0.4 ; python_version < '3.13'",
    "prophet>=1.1.5",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "torch>=2.2",

    # Prom exposition
    "prometheus-client>=0.20",

    # Dashboard UI (server-rendered)
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
    "httpx>=0.27",
]

[project.scripts]
forecaster-api = "forecaster.api.main:run"
forecaster-scheduler = "forecaster.scheduling.scheduler:run"
forecaster-worker = "forecaster.training.tasks:run_worker"
forecaster-seed = "scripts.seed_synthetic:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
forecaster = [
    "py.typed",
    "ui/templates/*.html",
    "ui/static/css/*.css",
    "ui/static/js/*.js",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
